--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@prisma/client": "^5.21.1",
+    "amadeus": "^11.0.0",
+    "amadeus-ts": "^5.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "http-status-codes": "^2.3.0",
