--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "http-status-codes": "^2.3.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
+    "react-calendar": "^3.9.0",
     "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
