--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "amadeus-ts": "^5.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "http-status-codes": "^2.3.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -32,9 +34,10 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.1",
-    "postcss": "^8",
+    "postcss": "^8.4.47",
     "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
