--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "install": "--legacy-peer-deps",
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
@@ -23,8 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "next": "15.0.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
