--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "http-status-codes": "^2.3.0",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "next": "15.0.1",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
