--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "amadeus-next-tracking-fligths",
+  "engines": {
+    "node": "18.x"
+  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
