feat(app): add datalist

--- a/package.json
+++ b/package.json
@@ -1,8 +1,5 @@
 {
   "name": "amadeus-next-tracking-fligths",
-  "engines": {
-    "node": "18.x"
-  },
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -27,7 +24,9 @@
     "moment": "^2.30.1",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "react-datalist-input": "^3.2.1",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "use-debounce": "^10.0.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
